# omu

./: Cargo.toml  README.md
examples/: simple.rs
omu-macros/: Cargo.toml
omu-macros/examples/: event.rs  foo.rs  slash.rs
omu-macros/src/: lib.rs
src/: lib.rs  macros.rs  main.rs  utils.rs
src/cache/: in_memory.rs
src/client/: core.rs  mod.rs
src/dataclasses/: DEVELOPERS.md  _traits.rs  attachment.rs  channel.rs  common.rs  guild.rs  message.rs  mod.rs  role.rs  snowflake.rs  user.rs
src/gateway/: core.rs  event.rs  event_data.rs  intents.rs  mod.rs  sharding.rs
src/http/: client.rs  http_messages.rs  mod.rs
src/models/: attachment.rs  channel.rs  message.rs  mod.rs  role.rs  user.rs
